# pydatacolor

./: LICENSE  README.md  Taskfile.yml  pyproject.toml  test.py  test07.py  test2.py  test3.py  test4.py  test5.py  test6.css  test6.py  testcam.py
lofigui/: __init__.py  aprint.py
notebooks/: CalibrationData.ipynb  FirstTestColorCheckr.ipynb  SpyderPrint_USB trace.txt  Trace description.ipynb  Untitled.ipynb
pydatacolor/: __init__.py  datacolor.py  model.py
templates/: test07.html  test07_connect.html  test07_print.html  test07_status.html
