[tool.poetry]
name = "pydatacolor"
version = "0.1.0"
description = "Connection to Datacolor"
authors = ["Humphrey Drummond <hum3@drummond.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyusb = "^1.2.1"
libusb = "^1.0.26b5"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
black = "^23.3.0"
scipy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
